<resources>
    <string name="app_name">ProjectAdd</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="log_in">Log in</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="mobile_no_email">Mobile No/Email</string>
    <string name="hospital_organization">Hospital/Organization</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="speciality">Speciality</string>
    <string name="license_no">License No</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="location">Location</string>
    <string name="degree">Degree</string>
    <string name="already_have_an_account_login_in">Already have an account Login In</string>
    <string name="welcome_aboard">Welcome ABOARD</string>
    <string name="please_enter_details">Please enter details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_send_a_code_to_verify_your_id">We send a code to verify your ID</string>
    <string name="verification">Verification</string>
    <string name="didnt_recieve_a_code">Didnt Recieve a code ?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="plus_button_description">Increase Quantity</string>
    <string name="minus_button_description">Decrease Quantity</string>
    <string name="here_are_your_details">Here are your details</string>
    <string name="laboratory">Laboratory</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="abha_id">Abha Id</string>
    <string name="residence">Residence</string>
    <string name="records">Records</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>