<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".SignUpDoctorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_aboard"
            android:textStyle="bold"
            android:layout_gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_details"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left" />
        <EditText
            android:id="@+id/doctorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginHorizontal="3dp"
            android:textColorHint="@color/black"
            android:ems="10"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:elevation="3dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_name"
            />

        <EditText
            android:id="@+id/doctorMobileNoemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="3dp"
            android:textColorHint="@color/black"
            android:ems="10"
            android:textSize="20dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="@string/mobile_no_email"
           />

        <EditText
            android:id="@+id/doctorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:textSize="20dp"
            android:elevation="3dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
 />
        <EditText
            android:id="@+id/doctorOrganization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:textSize="20dp"
            android:hint="@string/hospital_organization"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/doctorAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="3dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="15dp"
            android:hint="@string/age"
            android:textSize="20dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            />

            <EditText
                android:id="@+id/doctorGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textColorHint="@color/black"
                 />
            <EditText
                android:id="@+id/doctorLicenseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/license_no"
                android:textSize="20dp"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                 />
        <EditText
            android:id="@+id/doctorSpeciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/speciality"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
          />


    </LinearLayout>

    <Button android:id="@+id/doctorSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
       />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:textSize="16dp"
            android:layout_gravity="right"
            android:paddingRight="12dp"
            />
        <TextView
            android:id="@+id/logInDirectToSignUpDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in "
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_gravity="left"
            />

    </LinearLayout>


</LinearLayout>