<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".SignUpPharmacistActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginHorizontal="3dp"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_aboard"
            android:textStyle="bold"
            android:layout_gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_details"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/pharmacistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:textColorHint="@color/black"
            android:ems="10"
            android:background="@color/white"
            android:layout_marginBottom="12dp"
            android:elevation="3dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_name"
            />

        <EditText
            android:id="@+id/pharmacistMobileNoemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="3dp"
            android:textColorHint="@color/black"
            android:ems="10"
            android:background="@color/white"
            android:elevation="3dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/mobile_no_email"
          />

        <EditText
            android:id="@+id/pharmacistPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
           />
        <EditText
            android:id="@+id/pharmacistLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/pharmacistDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="3dp"
            android:ems="10"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:padding="15dp"
            android:hint="@string/degree"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/pharmacistLicenseNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:hint="License No"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
           />



    </LinearLayout>

    <Button android:id="@+id/doctorSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:textSize="16dp"
        android:layout_gravity="right"
        android:paddingRight="12dp"
        />
    <TextView
        android:id="@+id/logInDirectToSignUpPharmacist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in "
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:layout_gravity="left"
        />

</LinearLayout>
</LinearLayout>