<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/selected"
    tools:context=".WelcomeActivity"
    >


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="135dp"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="25dp">


        <Button
            android:id="@+id/doctorWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:elevation="3dp"
            android:ems="10"
            android:padding="15dp"
            android:backgroundTint="@color/buttonin"
            android:text="@string/doctor"
            android:textAlignment="center"
            android:textSize="20dp"
            android:fontFamily="@font/opensans_semixondensed_bold"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/patientWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="24dp"
            android:elevation="3dp"
            android:fontFamily="@font/opensans_semixondensed_bold"
            android:ems="10"
            android:textSize="20dp"
            android:padding="15dp"
            android:backgroundTint="@color/buttonin"
            android:text="@string/patient"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />



        <Button
            android:id="@+id/pharmacistWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="24dp"
            android:elevation="3dp"
            android:ems="10"
            android:backgroundTint="@color/buttonin"
            android:padding="15dp"
            android:text="@string/pharmacist"
            android:textSize="20dp"
            android:fontFamily="@font/opensans_semixondensed_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"

             />
        <Button
            android:id="@+id/labWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="24dp"
            android:elevation="3dp"
            android:ems="10"
            android:padding="15dp"
            android:backgroundTint="@color/buttonin"
            android:text="@string/laboratory"
            android:textAlignment="center"
            android:textSize="20dp"
            android:fontFamily="@font/opensans_semixondensed_bold"
            android:textColor="@color/black"
            android:textStyle="bold"
            />





    </LinearLayout>


</LinearLayout>