<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/selected"
    android:padding="20dp"
    tools:context=".LogInLabActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:layout_marginHorizontal="4dp"
        android:padding="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/labLoginId"
            android:layout_width="match_parent"
            android:height="48dp"
            android:textColor="@color/black"
            android:elevation="3dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="3dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:backgroundTint="@color/back1"
            android:paddingHorizontal="25dp"
            android:maxLength="10"
            android:paddingVertical="15dp"
            android:inputType="text"
            android:hint="@string/login_id"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:ems="10"
            />
        <EditText
            android:id="@+id/labLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:ems="10"
            android:inputType="textPassword"
            android:backgroundTint="@color/back1"
            android:hint="@string/password"
            android:padding="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
  />




        <Button
            android:id="@+id/logInLabBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/log_in"
            android:textSize="22sp"
            android:backgroundTint="@color/buttonin"

            android:textColor="@color/white"
            android:padding="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Didn't have an Account?"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/signUpLabOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="80dp"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </LinearLayout>



    </LinearLayout>



</LinearLayout>