<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EnterOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="6dp"
        android:layout_marginHorizontal="3dp"
        >
        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="40sp"
            android:textAlignment="center"
            android:padding="5dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_send_a_code_to_verify_your_id"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otp1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="1"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:inputType="number"
                android:background="@drawable/light_rounded_corners"
                android:hint="X"/>
            <EditText
                android:id="@+id/otp2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="1"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:inputType="number"
                android:background="@drawable/light_rounded_corners"
                android:hint="X"/>
            <EditText
                android:id="@+id/otp3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="1"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:inputType="number"
                android:hint="X"
                android:background="@drawable/light_rounded_corners"
               />

            <EditText
                android:id="@+id/otp4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="1"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:inputType="number"
                android:background="@drawable/light_rounded_corners"
                android:hint="X"/>


            <EditText
                android:id="@+id/otp5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="1"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:inputType="number"
                android:background="@drawable/light_rounded_corners"
                android:hint="X"/>


            <EditText
                android:id="@+id/otp6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="1"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:inputType="number"
                android:background="@drawable/light_rounded_corners"
                android:hint="X"/>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/didnt_recieve_a_code"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/resendOtpMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:text="@string/resend_code"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/verifyOtp"
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/black"
            />

    </LinearLayout>

</LinearLayout>